# cdoc

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.local.json
.claude/skills/coding-guidelines/: SKILL.md
.claude/skills/performance/: SKILL.md
.claude/skills/testing/: SKILL.md
.claude/skills/zero-copy/: SKILL.md
.docs/: compaction.md  crdt.md  hlc.md  length-prefixed-varint.md  lseq.md  lsm.md  object-decomposition.md  transactions.md  wal.md
benches/: lsm.rs  path_read.rs  query_parse.rs
src/: db.rs  hlc.rs  lib.rs  mutation.rs  pid.rs  transaction.rs  varint.rs
src/path/: lseq.rs  lww.rs  mod.rs  read.rs  write.rs
src/query/: mod.rs  parse.rs
src/sst/: compaction.rs  memtable.rs  mod.rs  read.rs  sstable.rs  write.rs
src/wal/: mod.rs
tests/: lsm_test.rs
