[package]
name = "cdoc"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0"
memmap2 = "0.9"
bytes = { version = "1.11", features = ["serde"] }
smallvec = { version = "2.0.0-alpha.12", features = ["bytes", "serde"] }
zerocopy = { version = "0.8", features = ["derive", "simd"] }
bitflags = "2.11"
fastrand = "2.3"
serde = { version = "1.0", features = ["derive"] }
arc-swap = { version = "1.8" }
parking_lot = { version = "0.12", features = [] }
chrono = { version = "0.4", features = ["serde"] }
ciborium = { version = "0.2", features = [] }

[dev-dependencies]
tempfile = "3"
proptest = "1"