[package]
name = "cdoc"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2.0"
memmap2 = "0.9"
zerocopy = { version = "0.8", features = ["derive", "simd"] }
fastrand = "2.3"
crc32fast = "1.5"
serde = { version = "1.0", features = ["derive"] }
arc-swap = { version = "1.8" }
parking_lot = { version = "0.12", features = ["arc_lock"] }
chrono = { version = "0.4", features = ["serde"] }
ciborium = { version = "0.2", features = [] }
fastbloom-rs = "0.5"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "query_parse"
harness = false

[[bench]]
name = "path_read"
harness = false

[[bench]]
name = "lsm"
harness = false